# edu_queue

./: .gitignore  README.md  config.py  pyproject.toml
app/: __main__.py  config.py  interface_educator.py  interface_student.py  main.py  requirements.txt  states.py
app/api/: comparator.py  exceptions.py  student.py  teacher.py
app/configs/: config.py
app/db/: database_config.py  db.py
app/entry/: __main__.py  entry.py
app/models/: models.py
app/test/api/: test_teacher.py
app/tg/: interface_educator.py  interface_student.py
