[project]
name = "EduQueue"
version = "0.1.0"
authors = [
    { name="Вячеслав Григорович"},
    { name="Максим Вуколов"},
    { name="Вадим Козлов"},
    { name="Дмитрий Соколов"},
    { name="Глеб Герлах"}
]
description = "Часто при записи в очередь на защиту лабораторных методика 'кто первый встал -- того и тапки' кажется несправедливой. В целях решения этой проблемы предлагается Telegram-бот, в котором преподаватель может создавать очереди на сдачу с кастомными приоритетами."
requires-python = ">=3.8"
dependencies = [
    "psycopg2 >= 2.9.10",
    "pytest >= 8.3.0",
    "aiogram >= 3.14.0"
]
readme = "README.md"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfE"
testpaths = [
    "test"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["app/api", "app/configs", "app/db", "app/entry", "app/models", "app/tg"]

[project.scripts]
main = "app.entry.entry:main"

